; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/paride/extr_bpck6.c_bpck6_write_regr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/paride/extr_bpck6.c_bpck6_write_regr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @bpck6_write_regr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bpck6_write_regr(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %34

11:                                               ; preds = %4
  %12 = load i32, i32* %7, align 4
  %13 = icmp sle i32 %12, 7
  br i1 %13, label %14, label %34

14:                                               ; preds = %11
  %15 = load i32, i32* %6, align 4
  %16 = icmp sge i32 %15, 0
  br i1 %16, label %17, label %34

17:                                               ; preds = %14
  %18 = load i32, i32* %6, align 4
  %19 = icmp sle i32 %18, 1
  br i1 %19, label %20, label %34

20:                                               ; preds = %17
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @PPCSTRUCT(i32* %21)
  %23 = load i32, i32* %6, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i32, i32* %7, align 4
  %27 = or i32 %26, 8
  br label %30

28:                                               ; preds = %20
  %29 = load i32, i32* %7, align 4
  br label %30

30:                                               ; preds = %28, %25
  %31 = phi i32 [ %27, %25 ], [ %29, %28 ]
  %32 = load i32, i32* %8, align 4
  %33 = call i32 @ppc6_wr_port(i32 %22, i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %30, %17, %14, %11, %4
  ret void
}

declare dso_local i32 @ppc6_wr_port(i32, i32, i32) #1

declare dso_local i32 @PPCSTRUCT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
